add add-player endpoints
