# openapi/openapi.yml
@@ -155,8 +155,12 @@ paths:
       parameters:
         - $ref: "#/components/parameters/PathGameId"
       responses:
-        "204":
-          description: No Content
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Player"
   /games/{gameId}/players/{playerId}:
     delete:
       tags:
